<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_login_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/activity_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/app_title_text_size"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/activity_login_profile_img"
        android:layout_width="@dimen/profile_img_size"
        android:layout_height="@dimen/profile_img_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_toolbar"
        android:layout_marginTop="@dimen/toolbar_margin"
        android:src="@drawable/profile_img"/>

    <TextView
        android:id="@+id/activity_login_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_login_profile_img"
        android:layout_marginTop="@dimen/section_top_margins"
        android:layout_marginHorizontal="@dimen/side_margins"
        android:text="@string/login_header"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/header_text_size"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/activity_login_email_field"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_field_height"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/activity_login_header"
        app:layout_constraintEnd_toEndOf="@id/activity_login_header"
        app:layout_constraintTop_toBottomOf="@id/activity_login_header"
        android:layout_marginTop="@dimen/section_divider_top_margins"/>

    <EditText
        android:id="@+id/activity_login_password_field"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_field_height"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/activity_login_header"
        app:layout_constraintEnd_toEndOf="@id/activity_login_header"
        app:layout_constraintTop_toBottomOf="@id/activity_login_email_field"
        android:layout_marginTop="@dimen/section_top_margins"/>
    
    <Button
        android:id="@+id/activity_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/activity_login_header"
        app:layout_constraintEnd_toEndOf="@id/activity_login_header"
        app:layout_constraintTop_toBottomOf="@id/activity_login_password_field"
        android:layout_marginTop="@dimen/section_divider_top_margins"
        android:text="@string/login_button_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>
