<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/activity_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/app_title_text_size"
            android:textAlignment="center"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/activity_main_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_toolbar"
        android:layout_marginTop="@dimen/section_divider_top_margins"
        android:layout_marginHorizontal="@dimen/side_margins"
        android:text="@string/welcome_header"
        android:textColor="?attr/colorOnBackground"
        android:textSize="@dimen/header_text_size"
        android:textAlignment="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main_status_button_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_main_header"
        app:layout_constraintStart_toStartOf="@id/activity_main_header"
        app:layout_constraintEnd_toEndOf="@id/activity_main_header"
        android:layout_marginTop="@dimen/section_divider_top_margins">

        <Button
            android:id="@+id/activity_main_not_started_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/activity_main_in_progress_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/task_item_horizontal_margins"
            android:backgroundTint="@color/crimson"
            android:text="@string/not_started"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/activity_main_in_progress_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_main_not_started_button"
            app:layout_constraintEnd_toStartOf="@id/activity_main_completed_button"
            android:text="@string/in_progress"
            android:backgroundTint="@color/goldenrod"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"/>

        <Button
            android:id="@+id/activity_main_completed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_main_in_progress_button"
            android:layout_marginStart="@dimen/task_item_horizontal_margins"
            android:text="@string/completed"
            android:backgroundTint="@color/sea_green"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/activity_main_add_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_status_button_row"
        app:layout_constraintEnd_toEndOf="@id/activity_main_status_button_row"
        android:layout_marginTop="@dimen/section_divider_top_margins"
        android:text="@string/add_task"
        android:backgroundTint="@color/primary"
        android:textSize="@dimen/button_text_size"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/activity_main_status_button_row"
        app:layout_constraintEnd_toEndOf="@id/activity_main_status_button_row"
        app:layout_constraintTop_toBottomOf="@id/activity_main_add_task_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/section_divider_top_margins"/>

</androidx.constraintlayout.widget.ConstraintLayout>
